Added long exericse name wrapping.

--- a/mobile/app/pages/exercises/components/list-item/exercises-list-item.html
+++ b/mobile/app/pages/exercises/components/list-item/exercises-list-item.html
@@ -2,7 +2,7 @@
     
     <ion-card-header class="ExerciseItem-header">
         <ion-row>
-            <ion-col>
+            <ion-col class="ExerciseItemHeader-name" width-80>
                 {{exercise.name}}
             </ion-col>
             <ion-col text-right>
