--- a/mobile/app/pages/exercises/components/list-item/exercises-list-item.scss
+++ b/mobile/app/pages/exercises/components/list-item/exercises-list-item.scss
@@ -11,6 +11,10 @@
 }
 
 .ExerciseItemHeader {
+    @include element(name) {
+       white-space: normal;    
+    }
+    
     @include element(favorite) {
         font-size: 2rem;
     }
