--- a/mobile/app/pages/exercise/components/steps/exercise-steps.html
+++ b/mobile/app/pages/exercise/components/steps/exercise-steps.html
@@ -1,5 +1,5 @@
 <ion-list-header>
-    Steps
+    {{'EXERCISE_STEPS' | translate | normalize}}
 </ion-list-header>
         
 <ion-item *ngFor="let step of exercise.description.steps; let i = index"> 
