Exercise toolbar has been moved to the separate component.

--- a/mobile/app/pages/exercise/exercise.scss
+++ b/mobile/app/pages/exercise/exercise.scss
@@ -1,5 +1,6 @@
 @import "./components/steps/exercise-steps.scss";
 @import "./components/characteristics/exercise-chars.scss";
+@import "./components/toolbar/exercise-toolbar.scss";
 
 
 
