--- a/mobile/app/pages/exercises/components/list-item/exercises-list-item.html
+++ b/mobile/app/pages/exercises/components/list-item/exercises-list-item.html
@@ -20,7 +20,7 @@
         </ion-col>
         <ion-col *ngIf="exercise.mechanics" text-right>
             <button clear small class="ExerciseItemFooter-chars">
-            <ion-icon name='man'></ion-icon>
+            <ion-icon name='body'></ion-icon>
             {{'MECHANICS_' + exercise.mechanics | translate }}            
             </button>
         </ion-col>
