Draft implementation of the exericses filtering functionality.

--- a/mobile/app/common/components/toolbar/toolbar.html
+++ b/mobile/app/common/components/toolbar/toolbar.html
@@ -5,5 +5,5 @@
             <span showWhen="ios">Back</span>
         </button>
     </ion-buttons>
-   <ion-title>{{exercise.name}}</ion-title>
+   <ion-title>{{title}}</ion-title>
 </ion-toolbar>
