--- a/mobile/app/theme/app.core.scss
+++ b/mobile/app/theme/app.core.scss
@@ -11,4 +11,5 @@
 
 @import "../pages/exercises/exercises";
 @import "../pages/exercise/exercise";
+@import "../pages/exercises-filter/exercises-filter";
 @import "../pages/page3/page3";
