--- a/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
+++ b/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
@@ -18,11 +18,11 @@
     <ion-buttons *ngIf="!isSearchActive" end>    
         <button (click)="toggleSearchMode()">
             <ion-icon name='search'></ion-icon>
-        </button>    
+        </button> 
+        <button (click)="toggleFilter()" >
+            <ion-icon name='options'></ion-icon>
+        </button>        
     </ion-buttons>
-
-    <button *ngIf="!isSearchActive" menuToggle right>
-        <ion-icon name='options'></ion-icon>
-    </button>        
+   
         
 </ion-navbar>
