Implementation of the exercises filtering page as side menu of the exercises list.

--- a/mobile/app/common/components/toolbar/toolbar.html
+++ b/mobile/app/common/components/toolbar/toolbar.html
@@ -1,5 +1,5 @@
 <ion-toolbar>
-    <ion-buttons left>
+    <ion-buttons left *ngIf="showBackButton">
         <button (click)="dismiss()">
             <ion-icon name="arrow-back"></ion-icon>
             <span showWhen="ios">Back</span>
