--- a/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
+++ b/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
@@ -19,10 +19,9 @@
         <button (click)="toggleSearchMode()">
             <ion-icon name='search'></ion-icon>
         </button> 
-        <button (click)="toggleFilter()" >
-            <ion-icon name='options'></ion-icon>
-        </button>        
     </ion-buttons>
-   
+    <button menuToggle right>
+        <ion-icon name='options'></ion-icon>
+    </button>
         
 </ion-navbar>
