--- a/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
+++ b/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
@@ -20,7 +20,7 @@
             <ion-icon name='search'></ion-icon>
         </button> 
     </ion-buttons>
-    <button menuToggle right>
+    <button *ngIf="!isSearchActive" menuToggle right>
         <ion-icon name='options'></ion-icon>
     </button>
         
