--- a/mobile/app/theme/app.core.scss
+++ b/mobile/app/theme/app.core.scss
@@ -13,3 +13,5 @@
 @import "../pages/exercise/exercise";
 @import "../pages/exercises-filter/exercises-filter";
 @import "../pages/page3/page3";
+@import "../pages/workouts/workouts";
+
