--- a/mobile/app/pages/workouts/components/day-item/day-item.html
+++ b/mobile/app/pages/workouts/components/day-item/day-item.html
@@ -1,6 +1,6 @@
 <ion-row center>
     <ion-col text-left>{{item.label}}</ion-col>
     <ion-col text-right>
-    <ion-icon name="add-circle" class="DayItem-addWorkout"></ion-icon>  
+    <ion-icon name="add-circle" (click)="handleWorkoutClick()" class="DayItem-addWorkout"></ion-icon>  
     </ion-col>
 </ion-row>
