Continue implementation of the workout creation flow.

--- a/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
+++ b/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
@@ -9,11 +9,11 @@
     </div>
     
     <!-- Search inactive state -->
-     <ion-buttons *ngIf="!isSearchActive" left>
+     <!--<ion-buttons *ngIf="!isSearchActive" left>
         <button>
             <ion-icon name='menu'></ion-icon>
         </button>
- 	</ion-buttons>
+ 	</ion-buttons>-->
     
     <!--<button  menuToggle left>
         <ion-icon name='menu'></ion-icon>
