--- a/mobile/app/pages/workouts/components/day-item/day-item.scss
+++ b/mobile/app/pages/workouts/components/day-item/day-item.scss
@@ -1,5 +1,6 @@
 .DayItem {
     @include element(addWorkout){
-        color:  color($colors, primary);
+        color:  color($colors, secondary);
+        font-size: 2rem;
     }
 }
