--- a/mobile/app/theme/app.core.scss
+++ b/mobile/app/theme/app.core.scss
@@ -14,4 +14,5 @@
 @import "../pages/exercises-filter/exercises-filter";
 @import "../pages/page3/page3";
 @import "../pages/workouts/workouts";
+@import "../pages/workout/workout";
 
