--- a/mobile/app/pages/exercises/components/list/exercises-list.html
+++ b/mobile/app/pages/exercises/components/list/exercises-list.html
@@ -7,7 +7,7 @@
         </ion-item-divider>
         
         <ion-item *virtualItem="let exercise">
-          <exercises-list-item [exercise]="exercise"></exercises-list-item>  
+          <exercises-list-item [exercise]="exercise" [isWorkoutCreationFlow]="isWorkoutCreationFlow"></exercises-list-item>  
         </ion-item>
 
   </ion-list>
