--- a/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
+++ b/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
@@ -1,4 +1,4 @@
- <ion-navbar *navbar>
+ <ion-navbar *navbar [hideBackButton]="isSearchActive">
         
     <!-- Search active state -->
     <div *ngIf="isSearchActive">
