--- a/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
+++ b/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
@@ -15,7 +15,7 @@
         <button (click)="toggleSearchMode()">
             <ion-icon name='search'></ion-icon>
         </button> 
-        <button (click)="toggleFilter()">
+        <button (click)="toggleFilter($event)">
             <ion-icon name='options'></ion-icon>
         </button>
     </ion-buttons>
