--- a/mobile/app/pages/workouts/workouts.scss
+++ b/mobile/app/pages/workouts/workouts.scss
@@ -1,9 +1,7 @@
 @import "./components/day-item/day-item";
 
-.Workouts{
-
+.Workouts {
     @include element(add) {
-        z-index:100;
+        @extend .CustomFab;
     }
-
 }
