Started implementation of the scheduled workouts displaying.

--- a/mobile/app/pages/workouts/components/day-item/day-item.html
+++ b/mobile/app/pages/workouts/components/day-item/day-item.html
@@ -1,3 +1,8 @@
 <ion-row center>
+   <ion-col width-20 text-left>
     {{item.label}}
+   </ion-col>    
+   <ion-col width-80 text-center>
+       <div *ngIf="item.workouts && item.workouts.length > 0" style="background: #bbb; padding:5px;">{{item.workouts[0].name}}</div>
+   </ion-col>
 </ion-row>
