--- a/mobile/app/pages/schedule/components/day-item/day-item.scss
+++ b/mobile/app/pages/schedule/components/day-item/day-item.scss
@@ -1,6 +1,9 @@
-.DayItem {
-    @include element(addWorkout){
-        color:  color($colors, secondary);
-        font-size: 2rem;
+.DayItemWorkout {
+    
+    @include element(templateHeader){
+        background: #eee;
+        padding: 5px;
     }
 }
+
+
