--- a/mobile/app/pages/schedule/components/day-item/day-item.html
+++ b/mobile/app/pages/schedule/components/day-item/day-item.html
@@ -4,21 +4,23 @@
    </ion-col>    
    <ion-col width-80 text-center>
         
-        <ion-card *ngFor="let workout of item.workouts"
-                  (click)="proceedToWorkout.emit({workout:workout,day:item.day})" 
-                  class="DayItemWorkout">
-            
-            <ion-card-content [class.DayItemWorkout-templateHeader]="workout.state === 'template'" text-center>
-                <ion-row center>
-                    <ion-col width-90>{{workout.name}}</ion-col>
-                    <ion-col width-10 text-right>
-                        <button small clear (click)="handleTemplateActionsClick({workout:workout,day:item.day},$event)">
-                            <ion-icon name="more"></ion-icon>
-                        </button>    
-                    </ion-col>    
-                </ion-row>
-            </ion-card-content>
-        </ion-card>
+        <div *ngFor="let workout of item.workouts">
+             <ion-card (click)="proceedToWorkout.emit({workout:workout,day:item.day})" 
+                       class="DayItemWorkout"
+                       *ngIf="workout.state !== 'deleted'">
+                
+                <ion-card-content [class.DayItemWorkout-templateHeader]="workout.state === 'template'" text-center>
+                    <ion-row center>
+                        <ion-col width-90>{{workout.name}}</ion-col>
+                        <ion-col width-10 text-right>
+                            <button small clear (click)="handleTemplateActionsClick({workout:workout,day:item.day},$event)">
+                                <ion-icon name="more"></ion-icon>
+                            </button>    
+                        </ion-col>    
+                    </ion-row>
+                </ion-card-content>
+      	    </ion-card>
+        </div>            
 
    </ion-col>
 </ion-row>
