--- a/mobile/app/pages/schedule/components/day-item/day-item.scss
+++ b/mobile/app/pages/schedule/components/day-item/day-item.scss
@@ -1,3 +1,9 @@
+.DayItem {
+    @include modifier(today) {
+        color: rgba(color($colors, primary), .85);
+    }
+}
+
 .DayItemWorkout {
     
     @include element(templateHeader){
