--- a/mobile/app/pages/schedule/schedule.scss
+++ b/mobile/app/pages/schedule/schedule.scss
@@ -27,3 +27,9 @@
     }
 
 }
+
+.ScheduleDay {
+    @include modifier(isToday){
+        background: rgba(color($colors, favorite), .08);
+    }    
+}
