Fixing cancel search button dissapearing after migration to the Ionic 2 beta 9 version.

--- a/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
+++ b/mobile/app/pages/exercises/components/navbar/exercises-navbar.html
@@ -4,6 +4,7 @@
     <div *ngIf="isSearchActive">
         <ion-searchbar (ionInput)="searchExercises.emit($event)"
                        (ionCancel)="toggleSearchMode()"
+                       showCancelButton="true"
                        [placeholder]="'NAVBAR_SEARCH_PLACEHOLDER' | translate"> 
         </ion-searchbar>
     </div>
