Temporary workaround for the virtuall scroll component issue.

--- a/mobile/app/common/components/exercises-list/exercises-list.html
+++ b/mobile/app/common/components/exercises-list/exercises-list.html
@@ -10,9 +10,15 @@
             
             <exercises-list-item [exercise]="exercise" 
                                  [isWorkoutCreationFlow]="isWorkoutCreationFlow"
-                                 [isSelected]="checkExerciseSelection(exercise.id)"
                                  (exerciseSelect)="selectExercise(exercise)"
                                  (exerciseUnselect)="unselectExercise(exercise)"></exercises-list-item>  
+
+            <!--<exercises-list-item [exercise]="exercise" 
+                                 [isWorkoutCreationFlow]="isWorkoutCreationFlow"
+                                 [isSelected]="checkExerciseSelection(exercise)"
+                                 (exerciseSelect)="selectExercise(exercise)"
+                                 (exerciseUnselect)="unselectExercise(exercise)"></exercises-list-item>-->
+
         </ion-item>
   </ion-list>
 </ion-content>
